# obj-viewer

./: .gitignore  Cargo.toml  build.rs
assets/: dice2.mtl  red_cube.mtl
src/: bake.vert  bake.vert.spv  lib.rs  main.rs  no_shade.frag  no_shade.frag.spv  no_shade.vert  no_shade.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  shader_settings.rs
src/shader_settings/: camera.rs  instance.rs  light.rs  model.rs  shadowmap.rs  texture.rs  uniform.rs
src/store/: dice_and_light.rs
